--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -8,18 +8,32 @@
   }
 }
 
-
 ::-webkit-scrollbar {
-  display: none !important;
+  width: 15px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+  width: 0;
+  height: 0;
+  border-left: 16px solid #8B7E79;
+  border-top: 16px solid #8B7E79;
+  border-bottom: 16px solid transparent;
+  border-right: 16px solid transparent;
 }
 
 ::-webkit-scrollbar-track {
-  display: none !important;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  display: none !important;
-
+  background-color: #373737;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #272727;
 }
 
 .loading-box {
@@ -53,6 +67,7 @@
   left: 0;
   z-index: 98
 }
+
 
 .grab-button {
   width: 32px;
@@ -164,7 +179,6 @@ body {
   width: 100%;
   height: 100%;
   justify-content: center;
-  background: transparent !important;
 }
 
 .left-container {
@@ -203,7 +217,7 @@ body {
 .workshop_header {
   z-index: 1;
   background: url(https://i.imgur.com/j5Tbhz3.png) no-repeat;
-  width: 100% !important;
+  width: 850px !important;
   background-size: cover;
   color: #fff;
   backdrop-filter: blur(8px);
@@ -213,7 +227,7 @@ body {
   position: absolute;
   /* left: 6vw; */
   top: 0px;
-  /* max-width: fit-content; */
+  max-width: fit-content;
 }
 
 .sorting-bar {
@@ -297,7 +311,8 @@ html {
 
 :root {
   --GithubM-dark: #010409;
-  --GithubA-darkT: #0D1117;
+  --GithubHov-dark: #0B0F14;
+  --GithubA-darkT: #10141c;
   --GithubM-darkT: #01040900;
   --GithubA-darkT: #0d111780;
   --Github-orange: #F78166;
@@ -337,10 +352,11 @@ html {
 
 
 .browseAppDetails {
-  display: table;
-  width: 958px;
-  height: 160px;
-  position: relative
+    /* display: table; */
+    width: 850px;
+    /* max-width: 950px; */
+    height: 160px;
+    position: relative;
 }
 
 .workshop_browse_menu_area {
@@ -603,7 +619,8 @@ h1 {
 .game-choice {
   display: inline-block;
   margin: 20px;
-  cursor: pointer
+  cursor: pointer;
+  border-radius: 2;
 }
 .game-choices {
 background: transparent !important;
@@ -613,7 +630,8 @@ background: transparent !important;
   width: 200px;
   height: 200px;
   background-color: #0D1117;
-  transition: transform 0.2s
+  transition: transform 0.2s;
+  border-radius: 5px;
 }
 
 .game-choice:hover .game-image {
