--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -12,6 +12,10 @@
   width: 15px;
 }
 
+body {
+  color: #8B7E79
+}
+
 ::-webkit-scrollbar-corner {
   background: transparent;
   width: 0;
@@ -179,6 +183,7 @@ body {
   width: 100%;
   height: 100%;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .left-container {
@@ -460,6 +465,7 @@ img {
   color: #fff;
   padding: 12px 16px;
   text-decoration: none;
+  backdrop-filter: blur(100px);
   display: block;
   z-index: 4
 }
@@ -620,7 +626,6 @@ h1 {
   display: inline-block;
   margin: 20px;
   cursor: pointer;
-  border-radius: 2;
 }
 .game-choices {
 background: transparent !important;
